<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.ayokunlepaul.payee.BankUtils"/>
        <variable name="Card" type="com.ayokunlepaul.payee.core.repository.entities.ATMCard"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintGuide_begin="@dimen/payee_guideline"
                android:id="@+id/guideline3"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline4"
                app:layout_constraintGuide_end="@dimen/payee_guideline"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_holder"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:id="@+id/textView3"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@id/toolbar3"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:id="@+id/textView4"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bank_name"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:id="@+id/textView6"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="RUTH OGUNMAKINJU"
                android:text="@{Card.cardHolderName}"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:id="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView3"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="1234 5678 8901 26379"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:text="@{BankUtils.formatCardNumber(Card.cardNumber)}"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:id="@+id/textView5"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/textView4"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Polaris Bank"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@{Card.bankName}"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:id="@+id/textView7"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/textView6"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toEndOf="@+id/view2" android:layout_marginStart="16dp"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/view3" app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                android:layout_marginEnd="16dp"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/view2" app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toStartOf="@+id/guideline4" android:layout_marginTop="8dp"
                android:layout_marginEnd="64dp" android:layout_marginStart="64dp"/>

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/transactions"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintEnd_toStartOf="@+id/guideline4" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/view2" android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:theme="@style/AppTheme"
                style="@style/AppTheme"
                android:minHeight="?attr/actionBarSize"
                android:id="@+id/toolbar3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>